WIP: test fix carousel on IOS

--- a/Frontend/src/pages/countdown/Countdown.module.css
+++ b/Frontend/src/pages/countdown/Countdown.module.css
@@ -192,6 +192,7 @@
 
 .projectCard {
 	width: 80%;
+	max-width: 100%;
 	border-radius: 0.5rem;
 	padding: 1.25rem;
 	box-sizing: border-box;
@@ -205,7 +206,8 @@
 	}
 
 	.carouselImage {
-		width: 80vw;
+		width: 100%;
+		max-width: 100%;
 		border-radius: 1.5rem;
 		box-shadow:
 			5px 5px 0 1px var(--shadow-primary),
@@ -541,6 +543,10 @@ h2 {
 .beige {
 	background-color: var(--bg-shift-secondary);
 	padding: 0;
+
+	p {
+		text-align: left;
+	}
 }
 
 .orange {
